Implementing Internationalization in the other screens.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,5 +12,6 @@
     "idiomas": "Languages",
     "ajuda": "Help",
     "sobre": "About",
-    "cancelar": "Cancel"
+    "cancelar": "Cancel",
+    "tituloPeca": "Piece Title"
 }
