--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -12,5 +12,6 @@
     "idiomas": "Idiomas",
     "ajuda": "Ayuda",
     "sobre": "Sobre",
-    "cancelar": "Cancelar"
+    "cancelar": "Cancelar",
+    "tituloPeca": "Título de la Pieza"
 }
