--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -12,5 +12,6 @@
     "idiomas": "Idiomas",
     "ajuda": "Ajuda",
     "sobre": "Sobre",
-    "cancelar": "Cancelar"
+    "cancelar": "Cancelar",
+    "tituloPeca": "Título da Peça"
 }
